Feat: 환자/일자/TaskDefinition 단위 공용 노트 기능 추가
- 환자와 특정 날짜에 대한 TaskDefinition 단위 공용 노트 생성 및 조회 API 추가 (수정은 추가 예정)
- 공용 노트와 관련된 데이터베이스 테이블 및 스키마 정의
- 태스크와 공용 노트 간의 관계 설정
- API 경로 수정으로 일관성 있는 데이터 접근 방식 제공

--- a/src/main/resources/static/management-charts.html
+++ b/src/main/resources/static/management-charts.html
@@ -264,7 +264,7 @@
             </div>
 
             <div class="muted">
-                경로: <code>/tasks/patients/{patientId}/days/{taskDate}</code>
+                경로: <code>/tasks/patients/{patientId}/{taskDate}</code>
             </div>
 
             <div class="legend">
@@ -469,7 +469,7 @@
     const API = {
         getPatient: (patientId) => apiFetch(`/patients/${patientId}`, { method:"GET" }),
         getTaskDefinitions: () => apiFetch(`/task-definitions`, { method:"GET" }),
-        getPatientDayTasks: (patientId, taskDate) => apiFetch(`/tasks/patients/${patientId}/days/${taskDate}`, { method:"GET" }),
+        getPatientDayTasks: (patientId, taskDate) => apiFetch(`/tasks/patients/${patientId}/${taskDate}`, { method:"GET" }),
         createTask: (payload) => apiFetch(`/tasks`, { method:"POST", body: JSON.stringify(payload) }),
 
         getStaffs: () => apiFetch(`/staffs`, { method:"GET" }),
